force-app/main/default/objects/Property__c/fields/Effective_Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Effective_Year_Built__c</fullName>
    <label>Effective Year Built</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>