force-app/main/default/objects/Property__c/fields/Municipality__c.field-meta.xml
<CustomField>
    <fullName>Municipality__c</fullName>
    <label>Municipality</label>
    <length>80</length>
    <type>Text</type>
</CustomField>