force-app/main/default/objects/Property__c/fields/Renovation_Date__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Date__c</fullName>
    <label>Renovation Date</label>
    <type>Date</type>
</CustomField>